<?xml version="1.0"?>
<package format="2">
  <name>rpi_mpu6050</name>
  <version>0.1.0</version>
  <description>A package for the MPU6050</description>

  <maintainer email="braineniac@protonmail.com">Daniel Hammer</maintainer>

  <license>Apache 2.0</license>

  <url type="source">https://github.com/braineniac/mpu6050</url>

  <author email="braineniac@protonmail.com">Daniel Hammer</author>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>bcm2835</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
